src/components/About/about.css
.bio {
    text-align: justify;
    line-height: 1.5;
}

.about-main {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    margin-top: 30px;
    margin-bottom: 30px;
}

.about-main-avatar {
    width: calc(50% - 10px);
    max-width: 600px;
    min-width: 280px;
}

.about-main-avatar img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.about-main-content {
    width: calc(50% - 10px);
}

.about-main-content-title {
    margin-top: 0;
    line-height: 1;
    font-size: 26px;
    color: var(--quaternary);
}

.about-main-content-item {
    margin-bottom: 28px;
}

.about-main-content-item span {
    line-height: 1;
    vertical-align: middle;
}

.about-main-content-item span svg {
    line-height: 1;
    vertical-align: middle;
}

.about-main-content-item span:not(:last-of-type) {
    margin-right: 6px;
}

.about-main-content-item-type {
    font-weight: bold;
    text-transform: capitalize;
}

@media only screen and (max-width: 1024px) {
    .about-main-avatar,
    .about-main-content {
        width: 100%;
        max-width: none;
    }
}

